--- a/templates/physical_record/detail.html
+++ b/templates/physical_record/detail.html
@@ -1,4 +1,4 @@
-{% extends "../../base.html" %}
+{% extends "base.html" %}
 
 {% block title %}Info | {{ object.alumno|title }}{% endblock title %}
 
