--- a/templates/physical_record/delete.html
+++ b/templates/physical_record/delete.html
@@ -2,24 +2,14 @@
 
 {% block title %}Confirmación{% endblock title %}
 
-{% block nav_alumnos %}active{% endblock %}
-
-{% block breadcrumb %}
-    <ul class="breadcrumb">
-        <li><a href="{% url 'alumnos:list' %}">Alumnos</a></li>
-        <li><a href="{% url 'alumnos:list_fisicos' %}">Datos Físicos</a></li>
-        <li class="active">Eliminar</li>
-    </ul>
-{% endblock breadcrumb %}
-
 {% block content %}
     <form action="" method="post" class="form-horizontal">
         <fieldset>
             {% csrf_token %}
-            <h1 class="text-center">¿Seguro que desea eliminar el registro datos físicos del {{ object.fecha }} de {{ object.alumno|title }}?</h1>
+            <h1 class="text-center">¿Seguro que desea eliminar el registro de datos físicos del {{ object.date }}?</h1>
             <br />
             <div class="text-center">
-                <a href="{% url 'alumnos:list_fisicos' %}" class="btn btn-primary">Cancelar</a>
+                <a href="{% url 'record:list' %}" class="btn btn-primary">Cancelar</a>
                 <input type="submit" value="Eliminar" class="btn btn-danger" />
             </div>
         </fieldset>
