--- a/templates/physical_record/form.html
+++ b/templates/physical_record/form.html
@@ -2,42 +2,34 @@
 
 {% block title %}Formulario{% endblock title %}
 
-{% block nav_alumnos %}active{% endblock %}
-
-{% block breadcrumb %}
-    <ul class="breadcrumb">
-        <li><a href="{% url 'alumnos:list' %}">Alumnos</a></li>
-        <li><a href="{% url 'alumnos:list_fisicos' %}">Datos Físicos</a></li>
-        <li class="active">Formulario</li>
-    </ul>
-{% endblock breadcrumb %}
-
 {% block content %}
-    <form action="" method="post" class="form-horizontal">
-        <fieldset>
-            <legend class="text-center">Datos Físicos</legend>
-            {% csrf_token %}
-            {% for field in form %}
-                <div class="form-group">
-                    <label for="{{ field.id_for_label }}" class="col-sm-4 col-lg-3 col-lg-offset-1 control-label">{{ field.label }}</label>
-                    <div class="col-sm-7 col-lg-6">
+    <div class="container">
+        <form action="" method="post" class="form-horizontal">
+            <fieldset>
+                <legend class="text-center">Datos Físicos</legend>
+                {% csrf_token %}
+                {% for field in form %}
+                    <div class="form-group">
                         {% if field.label == 'Alumno' %}
-                            {% if alumno %}
-                                <input type="text" value="{{ alumno|title }}" class="form-control" disabled>
-                            {% else %}
-                                {{ field }}
-                            {% endif %}
+                            <label for="{{ field.id_for_label }}" class="col-sm-4 col-lg-3 col-lg-offset-1 control-label" {% if not request.user.is_superuser %}hidden{% endif %}>{{ field.label }}</label>
+                            <div class="col-sm-7 col-lg-6" {% if not request.user.is_superuser %}hidden{% endif %}>
+                                <input type="text" name="{{ field.html_name }}" class="form-control" id="{{ field.id_for_label }}" value="{{ field.value }}" {% if not request.user.is_superuser %}hidden{% endif %} />
+                            </div>
                         {% else %}
-                            {{ field }}
+                            <label for="{{ field.id_for_label }}" class="col-sm-4 col-lg-3 col-lg-offset-1 control-label">{{ field.label }}</label>
+                            <div class="col-sm-7 col-lg-6">
+                                {{ field }}
+                            </div>
                         {% endif %}
+                        {{ field.errors }}
                     </div>
+                {% endfor %}
+                <br />
+                <div class="text-center">
+                    <a href="{% url 'record:list' %}" class="btn btn-primary">Cancelar</a>
+                    <input type="submit" value="Guardar" class="btn btn-success" />
                 </div>
-            {% endfor %}
-            <br />
-            <div class="text-center">
-                <a href="{% url 'alumnos:list_fisicos' %}" class="btn btn-default">Cancelar</a>
-                <input type="submit" value="Guardar" class="btn btn-success" />
-            </div>
-        </fieldset>
-    </form>
+            </fieldset>
+        </form>
+    </div>
 {% endblock content %}
