--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -11,6 +11,6 @@
 		</form>
 
 		<a href="{% url 'social:begin' 'facebook' %}">Iniciar sesión con Facebook</a><br>
-	    <a href="{% url 'social:begin' 'twitter' %}">Iniciar sesión con Twitter</a>
+	    <!-- <a href="{% url 'social:begin' 'twitter' %}">Iniciar sesión con Twitter</a> -->
 	</div>
 {% endblock content %}
