--- a/templates/physical_record/form.html
+++ b/templates/physical_record/form.html
@@ -4,6 +4,7 @@
 
 {% block content %}
     <div class="container">
+        <p class="lead">Por favor rellena los siguientes campos.</p>
         <form action="" method="post" class="form-horizontal">
             <fieldset>
                 <legend class="text-center">Datos Físicos</legend>
@@ -16,7 +17,7 @@
                                 <input type="text" name="{{ field.html_name }}" class="form-control" id="{{ field.id_for_label }}" value="{{ field.value }}" {% if not request.user.is_superuser %}hidden{% endif %} />
                             </div>
                         {% else %}
-                            <label for="{{ field.id_for_label }}" class="col-sm-4 col-lg-3 col-lg-offset-1 control-label">{{ field.label }}</label>
+                            <label for="{{ field.id_for_label }}" class="col-sm-4 col-lg-3 col-lg-offset-1 control-label">{{ field.label }}{% if field.label == 'Estatura (m)' or field.label == 'Peso (kg)' %}*{% endif %}</label>
                             <div class="col-sm-7 col-lg-6">
                                 {{ field }}
                             </div>
@@ -24,7 +25,9 @@
                         {{ field.errors }}
                     </div>
                 {% endfor %}
+                <input type="hidden" name="next" value="{{ next }}" />
                 <br />
+                <p>* Campos obligatorios</p>
                 <div class="text-center">
                     <a href="{% url 'record:list' %}" class="btn btn-primary">Cancelar</a>
                     <input type="submit" value="Guardar" class="btn btn-success" />
