Style to nutrition templates

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -4,7 +4,7 @@
 {% block title %}Escuela Fit{% endblock title %}
 
 {% block content %}
-    <header>
+    <header style="height: 100%;">
         <div class="header-content">
             <div class="header-content-inner">
                 <h1 id="homeHeading">BIENVENIDO  <br>A  ESCUELA FIT</br></h1>
