--- a/templates/main/weather.html
+++ b/templates/main/weather.html
@@ -22,9 +22,7 @@
 
 
 {% block content %}
-    {% include 'main/navbar.html' with weather='class="active"' %}
-
-    <header style="background-image: url({% static 'img/weather/weather.jpg' %}); max-width:100%;width:100%;">
+    <header style="background-image: url({% static 'img/weather/weather.jpg' %});">
         <div class="header-content">
             <div class="header-content-inner">
                 <h1>Calidad del Aire</h1>
