--- a/static/css/main/creative.css
+++ b/static/css/main/creative.css
@@ -150,7 +150,6 @@ aside {
 header {
   position: relative;
   width: 100%;
-  min-height: auto;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
@@ -184,7 +183,7 @@ header .header-content .header-content-inner p {
 }
 @media (min-width: 768px) {
   header {
-    min-height: 100%;
+    min-height: 50vh;
   }
   /*header .header-content {
     position: absolute;
