--- a/templates/nutrition/create.html
+++ b/templates/nutrition/create.html
@@ -11,18 +11,77 @@
             margin-top: 5px;
             margin-bottom: 5px;
         }
+
+        * {transition: all 0.3s;}
+
+        input[type="radio"], input[type="checkbox"] {
+          display: none;
+        }
+
+        label {
+          padding: 5px 15px 5px 51px;
+          display: inline-block;
+          position: relative;
+          cursor: pointer;
+          font-size: 1.1em;
+          color: orange;
+        }
+
+        label::before {
+          content: "";
+          width: 17px;
+          height: 17px;
+          display: inline-block;
+          border: 3px solid #F89406;
+          position: absolute;
+          left: 17px;
+          top: 4px;
+          border-radius: 5px;
+        }
+
+        label:hover {
+          background-color: #F89406;
+          color: white;
+          border-radius: 10px;
+        }
+
+        label:hover::before {
+          border: 3px solid #fff;
+        }
+
+        input[type="radio"]:checked + label,
+        input[type="checkbox"]:checked + label {
+          padding: 5px 15px;
+          background-color: #F89406;
+          color: white;
+          border-radius: 10px;
+        }
+
+        input[type="radio"]:checked + label:before,
+        input[type="checkbox"]:checked + label:before{
+            display: none;
+        }
     </style>
 {% endblock css %}
 
 {% block content %}
-    <header>
+    <header style="background-image: url({% static 'img/nutrition.jpg' %})">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeading">GUIA DE NUTRICIÓN</br></h1>
+                <h1 id="homeHeading">
+                    {% if schedule == 'breakfast' %}Desayuno
+                    {% elif schedule == 'collation1' %}Colación 1
+                    {% elif schedule == 'meal' %}Commida
+                    {% elif schedule == 'collation2' %}Colación 2
+                    {% elif schedule == 'dinner' %}Cena
+                    {% else %}GUÍA DE NUTRICIÓN
+                    {% endif %}
+                </h1>
                 <hr>
             </div>
         </div>
     </header>
+    <br><br>
     <div class="container">
     {% if schedule %}
         {% spaceless %}
@@ -63,10 +122,16 @@
                                 </div>
                             {% endfor %}
                     </div>
-                    <a href="{% url 'nutrition:cancel' %}" class="btn btn-primary">Cancelar</a>
-                    <input type="submit" value="Seleccionar" class="btn btn-success" />
+                    <br><br>
+                    <div id="selected">
+                        <span class="lead">Alimentos seleccionados: </span>
+                    </div>
+                    <br><br>
+                    <div class="text-center">
+                        <a href="{% url 'nutrition:cancel' %}" class="btn btn-primary">Cancelar</a>&nbsp;&nbsp;
+                        <input type="submit" value="Seleccionar" class="btn btn-success" />
+                    </div>
                 </form><br>
-                <div id="selected"></div>
         {% endspaceless %}
     {% else %}
     <div class="text-center">
