--- a/templates/nutrition/delete.html
+++ b/templates/nutrition/delete.html
@@ -1,24 +1,37 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block title %}Confirmación{% endblock title %}
 
 {% block content %}
-    <form action="" method="post" class="form-horizontal">
-        <fieldset>
-            {% csrf_token %}
-            <h1 class="text-center">¿Seguro que desea eliminar la guía de nutrición de 
-            {% if object.schedule == 'breakfast' %}Desayuno
-            {% elif object.schedule == 'collation1' %}Colación 1
-            {% elif object.schedule == 'meal' %}Commida
-            {% elif object.schedule == 'collation2' %}Colación 2
-            {% elif object.schedule == 'dinner' %}Cena
-            {% endif %}
-            del {{ object.create_date }}?</h1>
-            <br />
-            <div class="text-center">
-                <a href="{% url 'nutrition:list' %}" class="btn btn-primary">Cancelar</a>
-                <input type="submit" value="Eliminar" class="btn btn-danger" />
+    <header style="background-image: url({% static 'img/nutrition.jpg' %})">
+        <div class="header-content">
+            <div class="header-content-inner">
+                <h1 id="homeHeading">
+                    GUÍAS DE NUTRICIÓN
+                </h1>
+                <hr>
             </div>
-        </fieldset>
-    </form>
+        </div>
+    </header>
+    <div class="container">
+        <form action="" method="post" class="form-horizontal">
+            <fieldset>
+                {% csrf_token %}
+                <h1 class="text-center">¿Seguro que desea eliminar la guía de nutrición de 
+                {% if object.schedule == 'breakfast' %}Desayuno
+                {% elif object.schedule == 'collation1' %}Colación 1
+                {% elif object.schedule == 'meal' %}Commida
+                {% elif object.schedule == 'collation2' %}Colación 2
+                {% elif object.schedule == 'dinner' %}Cena
+                {% endif %}
+                del {{ object.create_date }}?</h1>
+                <br />
+                <div class="text-center">
+                    <a href="{% url 'nutrition:list' %}" class="btn btn-primary">Cancelar</a>
+                    <input type="submit" value="Eliminar" class="btn btn-danger" />
+                </div>
+            </fieldset>
+        </form>
+    </div>
 {% endblock content %}
