--- a/templates/physical_record/delete.html
+++ b/templates/physical_record/delete.html
@@ -1,17 +1,21 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block title %}Confirmación{% endblock title %}
 
 {% block content %}
-    <form action="" method="post" class="form-horizontal">
-        <fieldset>
-            {% csrf_token %}
-            <h1 class="text-center">¿Seguro que desea eliminar el registro de datos físicos del {{ object.date }}?</h1>
-            <br />
-            <div class="text-center">
-                <a href="{% url 'record:list' %}" class="btn btn-primary">Cancelar</a>
-                <input type="submit" value="Eliminar" class="btn btn-danger" />
-            </div>
-        </fieldset>
-    </form>
+    <header style="background-image: url({% static 'img/health.jpg' %})"></header>  
+    <div class="container">
+        <form action="" method="post" class="form-horizontal">
+            <fieldset>
+                {% csrf_token %}
+                <h1 class="text-center">¿Seguro que desea eliminar el registro de datos físicos del {{ object.date }}?</h1>
+                <br />
+                <div class="text-center">
+                    <a href="{% url 'record:list' %}" class="btn btn-primary">Cancelar</a>
+                    <input type="submit" value="Eliminar" class="btn btn-danger" />
+                </div>
+            </fieldset>
+        </form>
+    </div>
 {% endblock content %}
