--- a/templates/students/form.html
+++ b/templates/students/form.html
@@ -33,7 +33,7 @@
                     {% if request.user.student %}
                         <a href="{% url 'students:list' %}" class="btn btn-primary">Cancelar</a>
                     {% endif %}
-                    <input type="submit" value="Guardar" class="btn btn-success btn-lg" />
+                    <input type="submit" value="Guardar" class="btn btn-success" />
                 </div>
             </fieldset>
         </form>
