--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<section id="contact">
+<section class="bg-dark" id="contact">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
