--- a/templates/main/weather.html
+++ b/templates/main/weather.html
@@ -25,7 +25,7 @@
     <header style="background-image: url({% static 'img/weather/weather.jpg' %});">
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Calidad del Aire</h1>
+                <h1>CLIMA</h1>
             </div> 	
         </div>
     </header>
@@ -33,10 +33,10 @@
     <section>
         <div class="container">
             <p>Contingencia: {{ pollution }}</p>
-            <p>Temperatura actual: {{ weather.temp }} °C</p>
-            <p>Temperatura mínima: {{ weather.temp_min }} °C</p>
-            <p>Temperatura máxima: {{ weather.temp_max }} °C</p>
-            <p>Humedad: {{ weather.humidity }}%</p>
+            <div><p>Temperatura actual</p> <p>{{ weather.temp }} °C</p></div>
+            <div><p>Temperatura mínima</p> <p>{{ weather.temp_min }} °C</p></div>
+            <div><p>Temperatura máxima</p> <p>{{ weather.temp_max }} °C</p></div>
+            <div><p>Humedad</p> <p>{{ weather.humidity }}%</p></div>
 
             <!-- <div class="row">
                 <div class="card col-xs-10 col-xs-offset-1 col-lg-8 col-lg-offset-2">
